test_regress/t/t_func_no_parentheses_bad.out
%Error: t/t_func_no_parentheses_bad.v:16:11: Found definition of 'func' as a FUNC but expected a variable
   16 |       a = func;
      |           ^~~~
%Error: Exiting due to
